syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ecommerce.grpc";
option java_outer_classname = "MemberProto";

service IdService {
  rpc getId (IdRequest) returns (IdReply) {
  }
}

message IdRequest {
  oneof request {
    string email = 1;
    string name = 2;
  }
}

message IdReply {
  int32 id = 1;
}